--- a/Workshops.html
+++ b/Workshops.html
@@ -170,7 +170,7 @@
                         <p class="workshop-desc">
                             Join us for an in-depth exploration of the intersection between digital economy innovations and financial technology advancements. This workshop brings together researchers, practitioners, and industry experts to discuss the latest trends and challenges in blockchain technology, cryptocurrency markets, digital payment systems, and AI-driven financial services. The main objective is to share cutting-edge research and foster collaboration between academia and industry to address emerging challenges in the fintech ecosystem.
                         </p>
-                        <a href="index.html" target="_blank" class="workshop-btn">Visit Homepage</a>
+                        <a href="index.html" class="workshop-btn">Visit Homepage</a>
                         <p class="workshop-contact">Contact: <a href="mailto:littledune@ieti.net">littledune@ieti.net</a></p>
                     </div>
 
@@ -181,7 +181,7 @@
                         <p class="workshop-desc">
                             This workshop explores the transformative impact of artificial intelligence on business intelligence and data analytics. We aim to bring together researchers and practitioners to discuss novel AI techniques for extracting actionable insights from complex business data. Topics include machine learning for predictive analytics, natural language processing for customer intelligence, deep learning for market trend analysis, and automated decision-making systems. The workshop provides a platform for sharing innovative solutions and best practices in AI-driven business applications.
                         </p>
-                        <a href="index.html" target="_blank" class="workshop-btn">Visit Homepage</a>
+                        <a href="index.html" class="workshop-btn">Visit Homepage</a>
                         <p class="workshop-contact">Contact: <a href="mailto:isbdai2026@ieti.net">isbdai2026@ieti.net</a></p>
                     </div>
 
@@ -192,7 +192,7 @@
                         <p class="workshop-desc">
                             This workshop focuses on the intersection of big data, artificial intelligence, and sustainable urban development. We explore how emerging technologies can be leveraged to create smarter, more sustainable cities. Topics of interest include IoT-based urban monitoring, AI for traffic optimization, energy-efficient building systems, data-driven urban planning, and citizen engagement platforms. The workshop aims to foster interdisciplinary collaboration and promote the exchange of innovative ideas for building resilient and sustainable urban environments.
                         </p>
-                        <a href="index.html" target="_blank" class="workshop-btn">Visit Homepage</a>
+                        <a href="index.html" class="workshop-btn">Visit Homepage</a>
                         <p class="workshop-contact">Contact: <a href="mailto:smartcities@ieti.net">smartcities@ieti.net</a></p>
                     </div>
                 </div>
