--- a/cfw.html
+++ b/cfw.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Call for Workshops | ISBDAI 2026</title>
+    <title>Workshops | ISBDAI 2026</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="ISBDAI 2026, Call for Papers, Big Data, AI, Academic Conference" name="keywords">
-    <meta content="Submit your research to ISBDAI 2026 - International Symposium on Big Data and Artificial Intelligence" name="description">
+    <meta content="ISBDAI Workshops, Digital Economy, Fintech" name="keywords">
+    <meta content="Workshops and special sessions at ISBDAI 2026" name="description">
 
     <!-- Favicons -->
     <link href="img/page/favicon.ico" rel="icon">
@@ -22,6 +22,78 @@
 
     <!-- Main Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <style>
+        .workshops-container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: var(--space-xl) 0;
+        }
+        .workshop-card {
+            background: var(--color-white);
+            border: 1px solid var(--color-mid-gray);
+            border-radius: var(--radius-lg);
+            padding: var(--space-2xl);
+            margin-bottom: var(--space-xl);
+            text-align: left;
+            transition: all var(--transition-base);
+        }
+        .workshop-card:hover {
+            box-shadow: var(--shadow-lg);
+            border-color: var(--color-accent);
+        }
+        .workshop-title {
+            font-size: var(--text-xl);
+            font-weight: 700;
+            color: var(--color-text-dark);
+            margin-bottom: var(--space-sm);
+            line-height: 1.3;
+        }
+        .workshop-organizers {
+            font-style: italic;
+            color: var(--color-text);
+            margin-bottom: var(--space-lg);
+            font-size: var(--text-base);
+        }
+        .workshop-organizers span {
+            font-style: normal;
+        }
+        .workshop-desc {
+            font-size: var(--text-base);
+            color: var(--color-text);
+            line-height: var(--leading-relaxed);
+            margin-bottom: var(--space-lg);
+            text-align: justify;
+        }
+        .workshop-btn {
+            display: inline-block;
+            padding: var(--space-sm) var(--space-lg);
+            border: 1px solid var(--color-text-dark);
+            border-radius: var(--radius-sm);
+            color: var(--color-text-dark);
+            text-decoration: none;
+            font-size: var(--text-sm);
+            font-weight: 500;
+            transition: all var(--transition-base);
+            background: transparent;
+            margin-bottom: var(--space-lg);
+        }
+        .workshop-btn:hover {
+            background: var(--color-text-dark);
+            color: var(--color-white);
+        }
+        .workshop-contact {
+            font-size: var(--text-sm);
+            color: var(--color-text);
+        }
+        .workshop-contact a {
+            color: var(--color-accent);
+            text-decoration: none;
+        }
+        .workshop-contact a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
@@ -83,100 +155,17 @@
         </div>
         <div class="container">
             <h1 class="page-title">Call for Workshops</h1>
-            <p class="page-subtitle">Submit your research to ISBDAI 2026</p>
+            <p class="page-subtitle">Past Special Sessions and Focused Discussions</p>
         </div>
     </div>
 
     <main id="main">
         <section class="page-content">
-            <div class="container container-narrow">
-                <div class="content-block wow fadeInUp">
-                    <div class="content-text">
-                        <p>The symposium is organized by the <strong>International Engineering and Technology Institute (IETI)</strong> and co-organized by the <strong>Institute for Higher Education Research and Development (IHERD)</strong> at The Hong Kong Polytechnic University (PolyU).</p>
-
-                        <p>It focuses on frontier topics in both the theoretical and applied aspects of Data Science, Cloud Computing, Mobile Web, IoT, Computer Science (CS), and Artificial Intelligence (AI), while particularly encouraging and supporting research that explores the intersection of these fields with education. This includes, but is not limited to:</p>
-
-                        <ul class="styled-list">
-                            <li>AI-powered teaching tools</li>
-                            <li>Data-driven educational decision-making</li>
-                            <li>Cloud-based collaborative learning platforms</li>
-                            <li>IoT-enabled smart campus systems</li>
-                            <li>Ethical implications of technology in education</li>
-                            <li>Integration of CS/AI fundamentals into educational curricula to foster digital literacy</li>
-                        </ul>
-
-                        <div class="mt-md">
-                            <a href="ti.html" class="btn btn-outline btn-md">
-                                More Information on Topics <i class="fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                        </br>
-                        <p>As a leading international event, ISBDAI aims to provide an innovative platform for academic exchange among students, faculty members, researchers, and industry professionals from across the globe.</p>
-                    </div>
-                </div>
-
-                <div class="content-block wow fadeInUp" data-wow-delay="0.1s">
-                    <h3 class="content-title">
-                        <i class="fa fa-book"></i>
-                        Publication
-                    </h3>
-                    <div class="content-text">
-                        <p>All presented papers will be published in the conference proceedings, while selected outstanding papers will be recommended to relevant journals for potential publication.</p>
-                    </div>
-                </div>
-
-                <div class="content-block wow fadeInUp" data-wow-delay="0.2s">
-                    <h3 class="content-title">
-                        <i class="fa fa-file-text-o"></i>
-                        Submission Guidelines
-                    </h3>
-                    <div class="content-text">
-                        <p>Prospective authors are invited to submit full-length papers (up to 12 pages, single-column) adhering to the conference format via the Paper Submission System.</p>
-
-                        <p>For more details on thematic areas, paper formatting, and submission guidelines, please visit the conference website or contact the organizing committee.</p>
-
-                        <div class="mt-lg">
-                            <a href="sr.html" class="btn btn-accent btn-lg">
-                                Submit Your Paper <i class="fa fa-arrow-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="content-block wow fadeInUp" data-wow-delay="0.3s">
-                    <h3 class="content-title">
-                        <i class="fa fa-calendar"></i>
-                        Important Dates
-                    </h3>
-                    <div class="dates-grid" style="grid-template-columns: repeat(3, 1fr);">
-                        <div class="date-card">
-                            <div class="date-card-icon">
-                                <i class="fa fa-file-text-o"></i>
-                            </div>
-                            <div class="date-card-label">Paper Submission Deadline</div>
-                            <div class="date-card-value">March 16, 2026</div>
-                        </div>
-                        <div class="date-card">
-                            <div class="date-card-icon">
-                                <i class="fa fa-envelope-o"></i>
-                            </div>
-                            <div class="date-card-label">Author Notification</div>
-                            <div class="date-card-value">April 16, 2026</div>
-                        </div>
-                        <div class="date-card">
-                            <div class="date-card-icon">
-                                <i class="fa fa-user-plus"></i>
-                            </div>
-                            <div class="date-card-label">Registration Deadline</div>
-                            <div class="date-card-value">May 16, 2026</div>
-                        </div>
-                        <div class="date-card">
-                            <div class="date-card-icon">
-                                <i class="fa fa-calendar-check-o"></i>
-                            </div>
-                            <div class="date-card-label">Conference Dates</div>
-                            <div class="date-card-value">May 27-29, 2026</div>
-                        </div>
+            <div class="container">
+                <div class="workshops-container">
+                    <!-- Workshop 1 -->
+                    <div class="workshop-card wow fadeInUp">
+                        <h3 class="workshop-title">To be developed</h3>
                     </div>
                 </div>
             </div>
