--- a/committees.html
+++ b/committees.html
@@ -137,7 +137,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="img/page/logo.png" alt="ISBDAI Logo" class="logo-img">
+                    <img src="img/page/Logo.png" alt="ISBDAI Logo" class="logo-img">
                 </a>
             </div>
 
@@ -269,7 +269,7 @@
                     <h3 class="committee-title">Program Chair(s)</h3>
 
                     <div class="committee-member">
-                        <img src="img/speakers/Ramesh.png" alt="Ramesh Agarwal" class="member-photo">
+                        <img src="img/speakers/ramesh.png" alt="Ramesh Agarwal" class="member-photo">
                         <div class="member-info">
                             <div class="member-name">Prof. Dr. Ramesh Agarwal <span class="region-badge na">N. America</span></div>
                             <div class="member-title">McKelvey School of Engineering, <strong>Washington University in St. Louis</strong>, USA; IEEE Life Fellow; Fellow of American Association for Advancement of Science; Member of European Academy of Sciences and Arts</div>
@@ -418,7 +418,7 @@
                     </div>
 
                     <div class="committee-member">
-                        <img src="img/speakers/Aidy.png" alt="Aidy Ali" class="member-photo">
+                        <img src="img/speakers/aidy.png" alt="Aidy Ali" class="member-photo">
                         <div class="member-info">
                             <div class="member-name">Aidy Ali <span class="region-badge asia">Asia</span></div>
                             <div class="member-title">Professor of Mechanical Engineering at the <strong>National Defence University of Malaysia</strong>, Malaysia</div>
@@ -440,7 +440,7 @@
                     </div>
 
                     <div class="committee-member">
-                        <img src="img/speakers/Suman.png" alt="Suman Bhakri" class="member-photo">
+                        <img src="img/speakers/suman.png" alt="Suman Bhakri" class="member-photo">
                         <div class="member-info">
                             <div class="member-name">Suman Bhakri <span class="region-badge asia">Asia</span></div>
                             <div class="member-title">Professor, SRCC, <strong>University of Delhi</strong>, India</div>
@@ -451,7 +451,7 @@
                     </div>
 
                     <div class="committee-member">
-                        <img src="img/speakers/Chai.png" alt="Yujuan Chai" class="member-photo">
+                        <img src="img/speakers/chai.png" alt="Yujuan Chai" class="member-photo">
                         <div class="member-info">
                             <div class="member-name">Yujuan Chai <span class="region-badge asia">Asia</span></div>
                             <div class="member-title">Assistant Professor, School of Medical Engineering, <strong>Shenzhen University</strong>, Shenzhen, China</div>
@@ -627,7 +627,7 @@
                     </div>
 
                     <div class="committee-member">
-                        <img src="img/speakers/Zunjic.png" alt="Aleksandar Zunjic" class="member-photo">
+                        <img src="img/speakers/zunjic.png" alt="Aleksandar Zunjic" class="member-photo">
                         <div class="member-info">
                             <div class="member-name">Aleksandar Zunjic <span class="region-badge europe">Europe</span></div>
                             <div class="member-title">Professor, Faculty of Mechanical Engineering, Industrial Engineering Department, <strong>University of Belgrade</strong>, Serbia; Secretary-General of Federation of European Ergonomics Societies; President of Ergonomics Society of Serbia</div>
