--- a/cp.html
+++ b/cp.html
@@ -215,7 +215,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="img/page/logo.png" alt="ISBDAI Logo" class="logo-img">
+                    <img src="img/page/Logo.png" alt="ISBDAI Logo" class="logo-img">
                 </a>
             </div>
 
