--- a/keynotes.html
+++ b/keynotes.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="img/page/logo.png" alt="ISBDAI Logo" class="logo-img">
+                    <img src="img/page/Logo.png" alt="ISBDAI Logo" class="logo-img">
                 </a>
             </div>
 
@@ -96,7 +96,7 @@
                     <h3 class="people-section-title">2026 Keynote / Invited Speakers</h3>
                     <div class="keynote-grid">
                         <div class="person-card keynote-card">
-                            <img src="img/speakers/lai.png" alt="Daniel Lai" class="person-photo">
+                            <img src="img/speakers/Lai.png" alt="Daniel Lai" class="person-photo">
                             <div class="person-info">
                                 <div class="person-name">Prof. Daniel Lai</div>
                                 <div class="person-title">Former Vice President of The Hong Kong Polytechnic University, Hong Kong</div>
@@ -118,7 +118,7 @@
                         </div>
 
                         <div class="person-card keynote-card">
-                            <img src="img/speakers/wolfgang.png" alt="Wolfgang Karl Hardle" class="person-photo">
+                            <img src="img/speakers/Wolfgang.png" alt="Wolfgang Karl Hardle" class="person-photo">
                             <div class="person-info">
                                 <div class="person-name">Prof. Dr. Wolfgang Karl Hardle</div>
                                 <div class="person-title">Humboldt-Universitat zu Berlin, Germany</div>
