--- a/past-keynotes.html
+++ b/past-keynotes.html
@@ -166,7 +166,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="img/page/logo.png" alt="ISBDAI Logo" class="logo-img">
+                    <img src="img/page/Logo.png" alt="ISBDAI Logo" class="logo-img">
                 </a>
             </div>
 
@@ -252,7 +252,7 @@
                         </div>
 
                         <div class="keynote-card-simple">
-                            <img src="img/speakers/jamesc.png" alt="M. James C. Crabbe" class="speaker-photo">
+                            <img src="img/speakers/Jamesc.png" alt="M. James C. Crabbe" class="speaker-photo">
                             <div class="speaker-name">Prof. Dr. M. James C. Crabbe</div>
                             <div class="speaker-institution">Wolfson College of Oxford University, UK</div>
                             <div class="speaker-affiliation-logos" style="justify-content: center; margin-top: var(--space-sm);">
@@ -355,19 +355,19 @@
                     </div>
                     <div class="keynote-grid-simple">
                         <div class="keynote-card-simple">
-                            <img src="img/speakers/Kelvin.png" alt="Kelvin Joseph Bwalya" class="speaker-photo">
+                            <img src="img/speakers/kelvin.png" alt="Kelvin Joseph Bwalya" class="speaker-photo">
                             <div class="speaker-name">Prof. Dr. Kelvin Joseph Bwalya</div>
                             <div class="speaker-institution">University of Johannesburg, South Africa</div>
                         </div>
 
                         <div class="keynote-card-simple">
-                            <img src="img/speakers/Otilia.png" alt="Otilia Manta" class="speaker-photo">
+                            <img src="img/speakers/otilia.png" alt="Otilia Manta" class="speaker-photo">
                             <div class="speaker-name">Prof. Dr. Otilia Manta</div>
                             <div class="speaker-institution">Romanian Academy, Romania</div>
                         </div>
 
                         <div class="keynote-card-simple">
-                            <img src="img/speakers/Ubaldo.jpg" alt="Ubaldo Comite" class="speaker-photo">
+                            <img src="img/speakers/ubaldo.jpg" alt="Ubaldo Comite" class="speaker-photo">
                             <div class="speaker-name">Prof. Dr. Ubaldo Comite</div>
                             <div class="speaker-institution">University Giustino Fortunato - Benevento, Italy</div>
                         </div>
@@ -385,7 +385,7 @@
                         </div>
 
                         <div class="keynote-card-simple">
-                            <img src="img/speakers/cao.jpg" alt="Yong Cao" class="speaker-photo">
+                            <img src="img/speakers/Cao.jpg" alt="Yong Cao" class="speaker-photo">
                             <div class="speaker-name">Prof. Dr. Yong Cao</div>
                             <div class="speaker-institution">School of Big Data and Intelligent Engineering, Southwest Forestry University, Kunming</div>
                         </div>
@@ -411,7 +411,7 @@
                     </div>
                     <div class="keynote-grid-simple">
                         <div class="keynote-card-simple">
-                            <img src="img/speakers/Kelvin.png" alt="Kelvin Joseph Bwalya" class="speaker-photo">
+                            <img src="img/speakers/kelvin.png" alt="Kelvin Joseph Bwalya" class="speaker-photo">
                             <div class="speaker-name">Prof. Dr. Kelvin Joseph Bwalya</div>
                             <div class="speaker-institution">Vice Dean of Faculty of Business and Economics, University of Johannesburg, South Africa</div>
                         </div>
@@ -461,7 +461,7 @@
                         </div>
 
                         <div class="keynote-card-simple">
-                            <img src="img/speakers/Mu.png" alt="Shenglin Mu" class="speaker-photo">
+                            <img src="img/speakers/mu.png" alt="Shenglin Mu" class="speaker-photo">
                             <div class="speaker-name">Shenglin Mu</div>
                             <div class="speaker-institution">Ehime University, Japan</div>
                         </div>
