--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    
+    <meta property="og:title" content="ISBDAI 2026" />
+    <meta property="og:description" content="Conference website: CFP, program, venue, committees." />
+    <meta property="og:url" content="https://yinlaetitia.github.io/isbdai2026/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://yinlaetitia.github.io/isbdai2026/img/page/share-card.png?v=2" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
+    <meta itemprop="image" content="https://yinlaetitia.github.io/isbdai2026/img/page/share-card.png?v=2" />
+
     <title>ISBDAI 2026 | International Symposium on Big Data and AI</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="ISBDAI 2026, Big Data, Artificial Intelligence, Education Transformation, Academic Conference" name="keywords">
