add title and image for WeChat sharing

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     
-    <meta property="og:title" content="ISBDAI 2026" />
-    <meta property="og:description" content="Conference website: CFP, program, venue, committees." />
+    <meta property="og:title" content="ISBDAI 2026 | International Symposium on Big Data and AI" />
+    <meta property="og:description" content="ISBDAI 2026 Conference Website" />
     <meta property="og:url" content="https://yinlaetitia.github.io/isbdai2026/" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://yinlaetitia.github.io/isbdai2026/img/page/share-card.png?v=2" />
