--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     Big Data and Artificial Intelligence<br>
                     For Education Transformation (ISBDAI 2026) -->
                     2026 5th International Symposium on<br>
-                    Big Data and Artificial Intelligence:<br>
+                    Big Data and Artificial Intelligence<br>
                     For Education Transformation
                 </h1>
                 <div class="hero-info">
@@ -187,16 +187,6 @@
                                 <li><i class="fa fa-circle"></i> <strong>B. Presenter Only:</strong> Abstract / Poster is necessary to submit, it will not be published.</li>
                                 <li><i class="fa fa-circle"></i> <strong>C. Listener Only:</strong> Attend the conference.</li>
                             </ul>
-                        </div>
-                    </div>
-
-                    <div class="pub-item-vertical">
-                        <div class="pub-item-icon">
-                            <i class="fa fa-exclamation-circle"></i>
-                        </div>
-                        <div class="pub-item-content">
-                            <div class="pub-item-title">Note</div>
-                            <p class="pub-item-desc">Organizer and Publisher need to check the quality of the papers, and they cannot guarantee that all the conference articles will be published. Publisher sends all of its published materials to the indexing services. But please note that DBLP, Scopus, Engineering Village, EI Compendex, CPCI (Web of Science), etc., are all entirely separate entities from Publisher. As such, we cannot guarantee that a certain proceedings volume content will pass their review process - or, even if it does pass the review process, when exactly that volume will be indexed. They all have their own guidelines for acceptance, independent of Publisher's influence.</p>
                         </div>
                     </div>
 
